# django-jazzmin-template-research

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.py
polls_institute/: admin.py  models.py
polls_institute/migrations/: 0001_initial.py
